removing other sections, adding vertical text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       </h2>   
     </section>
     <section class="content-1">
+      <aside class="left">body heading</aside>  
+      <aside class="right">body heading</aside>
       <div class="content-wrapper">
         <h3>
          body header
@@ -40,48 +42,57 @@
         </p>
       </div>
     </section>
-    <section class="images-1">
-      <figure>
-        <img src="http://placehold.it/500x500"/>
-        <figcaption> image 1</figcaption>
-        <figcaption class="small"> here is some subtext</figcaption>
-      </figure>
-      <figure>
-        <img src="http://placehold.it/500x500"/>
-        <figcaption> image 2</figcaption>
-        <figcaption class="small"> here is some subtext</figcaption>
-      </figure>
-      <figure>
-        <img src="http://placehold.it/500x500"/>
-        <figcaption> image 3</figcaption>
-        <figcaption class="small"> here is some subtext</figcaption>
-      </figure>
-      <figure>
-        <img src="http://placehold.it/500x500"/>
-        <figcaption> image 4</figcaption>
-        <figcaption class="small"> here is some subtext</figcaption>
-      </figure>
-      <section class="content-2">
-      <h3>
-       body header
-      </h3>       
-      <p> 
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet metus eu erat vehicula consequat id eget odio. Integer diam sapien, laoreet non dictum vel, vestibulum at libero. Donec finibus ante vel neque vehicula congue. Ut id ante imperdiet, tristique arcu pharetra, tincidunt tortor. Sed ornare mattis condimentum. Aliquam ornare ut quam at faucibus. Mauris nisl dui, pretium quis commodo sed, elementum nec lectus. Nunc ut augue faucibus tortor interdum fringilla quis vel nunc. Quisque iaculis egestas iaculis. Duis sem est, sodales id ante id, efficitur auctor orci. Ut vestibulum ex eu mi fringilla aliquet. Phasellus ligula mauris, consectetur at metus quis, iaculis venenatis ipsum. Phasellus quis arcu dolor. Vivamus id tincidunt mauris. Vestibulum id tellus augue.
-      </p>
-      <p> 
-        Nam turpis risus, consequat id magna condimentum, congue consectetur libero. Aliquam suscipit convallis est, at maximus leo facilisis ut. Nulla consequat faucibus semper. Sed maximus justo enim, ut tincidunt mauris dictum a. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper at nunc eu tincidunt. Aenean quis tempus felis.
-      </p>
-      <p> 
-        Sed sed diam et metus mattis viverra. Proin pretium, dui sit amet porttitor laoreet, lacus lectus viverra ante, et consectetur purus ligula at nibh. Suspendisse id mi sapien. Aliquam ultricies ac nisl sit amet congue. Ut a elementum erat, sit amet blandit leo. Nulla facilisi. Proin tincidunt nisl at elementum commodo. Nam justo nibh, molestie consequat dapibus eu, lobortis non lectus. Aenean vitae egestas ante. Nulla facilisi. Donec vitae odio placerat, fermentum dui ac, rhoncus massa.
-      </p>
-      <p>
-        Integer vestibulum auctor ligula eget ultricies. Pellentesque rutrum mauris ac sem ultrices, sit amet rutrum ipsum volutpat. Duis nec lorem et dui aliquam feugiat id ac nulla. Sed vitae quam lacus. Donec nec ante eu justo rhoncus viverra vitae ac odio. Aenean suscipit velit et enim finibus convallis. Morbi justo neque, bibendum et eleifend et, facilisis id elit. Fusce lobortis dapibus sapien nec aliquet. Fusce eget turpis tristique, fermentum sem in, rhoncus turpis.
-      </p>
-      <p>
-        Praesent eleifend consequat ex quis sollicitudin. Quisque sollicitudin mollis diam, vel eleifend eros scelerisque vitae. Duis sed lacus ut est interdum dignissim. In hac habitasse platea dictumst. Nunc aliquam vitae magna eget mattis. Cras faucibus elit non sapien tincidunt, non ultrices eros consequat. Nunc id dapibus metus, feugiat tincidunt libero. Nunc sed libero quis tortor gravida ultricies. Fusce et neque nibh.
-      </p>
-    </section>
-    </section>
+    <!-- <section class="content-1 images-1">
+      <aside class="left">body heading</aside>  
+      <aside class="right">body heading</aside>
+      <div class="content-wrapper">
+        <figure>
+          <img src="http://placehold.it/500x500"/>
+          <figcaption> image 1</figcaption>
+          <figcaption class="small"> here is some subtext</figcaption>
+        </figure>
+        <figure>
+          <img src="http://placehold.it/500x500"/>
+          <figcaption> image 2</figcaption>
+          <figcaption class="small"> here is some subtext</figcaption>
+        </figure>
+        <figure>
+          <img src="http://placehold.it/500x500"/>
+          <figcaption> image 3</figcaption>
+          <figcaption class="small"> here is some subtext</figcaption>
+        </figure>
+        <figure>
+          <img src="http://placehold.it/500x500"/>
+          <figcaption> image 4</figcaption>
+          <figcaption class="small"> here is some subtext</figcaption>
+        </figure>
+      </div>
+    </section>  
+    <section class="content-1">
+      <aside class="left">body heading</aside>
+      <aside class="right">body heading</aside>
+      <div class="content-wrapper">
+        <h3>
+         body header
+        </h3>       
+        <p> 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet metus eu erat vehicula consequat id eget odio. Integer diam sapien, laoreet non dictum vel, vestibulum at libero. Donec finibus ante vel neque vehicula congue. Ut id ante imperdiet, tristique arcu pharetra, tincidunt tortor. Sed ornare mattis condimentum. Aliquam ornare ut quam at faucibus. Mauris nisl dui, pretium quis commodo sed, elementum nec lectus. Nunc ut augue faucibus tortor interdum fringilla quis vel nunc. Quisque iaculis egestas iaculis. Duis sem est, sodales id ante id, efficitur auctor orci. Ut vestibulum ex eu mi fringilla aliquet. Phasellus ligula mauris, consectetur at metus quis, iaculis venenatis ipsum. Phasellus quis arcu dolor. Vivamus id tincidunt mauris. Vestibulum id tellus augue.
+        </p>
+        <p> 
+          Nam turpis risus, consequat id magna condimentum, congue consectetur libero. Aliquam suscipit convallis est, at maximus leo facilisis ut. Nulla consequat faucibus semper. Sed maximus justo enim, ut tincidunt mauris dictum a. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper at nunc eu tincidunt. Aenean quis tempus felis.
+        </p>
+        <p> 
+          Sed sed diam et metus mattis viverra. Proin pretium, dui sit amet porttitor laoreet, lacus lectus viverra ante, et consectetur purus ligula at nibh. Suspendisse id mi sapien. Aliquam ultricies ac nisl sit amet congue. Ut a elementum erat, sit amet blandit leo. Nulla facilisi. Proin tincidunt nisl at elementum commodo. Nam justo nibh, molestie consequat dapibus eu, lobortis non lectus. Aenean vitae egestas ante. Nulla facilisi. Donec vitae odio placerat, fermentum dui ac, rhoncus massa.
+        </p>
+        <p>
+          Integer vestibulum auctor ligula eget ultricies. Pellentesque rutrum mauris ac sem ultrices, sit amet rutrum ipsum volutpat. Duis nec lorem et dui aliquam feugiat id ac nulla. Sed vitae quam lacus. Donec nec ante eu justo rhoncus viverra vitae ac odio. Aenean suscipit velit et enim finibus convallis. Morbi justo neque, bibendum et eleifend et, facilisis id elit. Fusce lobortis dapibus sapien nec aliquet. Fusce eget turpis tristique, fermentum sem in, rhoncus turpis.
+        </p>
+        <p>
+          Praesent eleifend consequat ex quis sollicitudin. Quisque sollicitudin mollis diam, vel eleifend eros scelerisque vitae. Duis sed lacus ut est interdum dignissim. In hac habitasse platea dictumst. Nunc aliquam vitae magna eget mattis. Cras faucibus elit non sapien tincidunt, non ultrices eros consequat. Nunc id dapibus metus, feugiat tincidunt libero. Nunc sed libero quis tortor gravida ultricies. Fusce et neque nibh.
+        </p>
+      </div>
+  </section> -->
+
   <script src="index.bundle.js"></script>
   </body>
 </html>
